--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.9
   realm: ^1.6.1
+  riverpod_annotation: ^2.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   flutter_flavorizr: ^2.2.1
+  very_good_analysis: ^5.1.0
+  riverpod_generator: ^2.3.9
+  build_runner: ^2.4.7
+  custom_lint: ^0.5.7
+  riverpod_lint: ^2.3.7
 
 flutter:
   uses-material-design: true
