--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,19 +12,23 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.9
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   realm: ^1.6.1
   riverpod_annotation: ^2.3.3
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
   flutter_flavorizr: ^2.2.1
   very_good_analysis: ^5.1.0
   riverpod_generator: ^2.3.9
   build_runner: ^2.4.7
   custom_lint: ^0.5.7
   riverpod_lint: ^2.3.7
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
