--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   realm: ^1.6.1
   riverpod_annotation: ^2.3.3
   fpdart: ^1.1.0
+  go_router: ^13.0.0
 
 dev_dependencies:
   flutter_test:
