--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,10 +9,10 @@ jobs:
       matrix:
         device:
           # The available simulators are listed by the "xcrun xctrace list devices" command
-          - "iPhone 15 Simulator (17.0)" # the name of the simulator could be different depending on the macos version you are using
+          - "iPhone 11 Simulator (16.2)" # the name of the simulator could be different depending on the macos version you are using
       # if one of the jobs in the matrix expansion fails, the rest of the jobs will be cancelled
       fail-fast: true
-    runs-on: macos-latest # or macos-latest if you prefer,  itembut be aware that the available simulators could be different if you run a different version
+    runs-on: macos-12 # or macos-latest if you prefer,  itembut be aware that the available simulators could be different if you run a different version
     steps:
       - name: "List all simulators"
         run: "xcrun xctrace list devices"
