--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,71 +1,20 @@
-name: Testing
+name: Flutter Testing
 
 on: [push, pull_request]
 
 jobs:
-  ios: 
-    # Creates a build matrix for your jobs. You can define different variations of an environment to run each job
-    strategy:
-      matrix:
-        device:
-          # The available simulators are listed by the "xcrun xctrace list devices" command
-          - "iPhone 11 Simulator (16.2)" # the name of the simulator could be different depending on the macos version you are using
-      # if one of the jobs in the matrix expansion fails, the rest of the jobs will be cancelled
-      fail-fast: true
-    runs-on: macos-12 # or macos-latest if you prefer,  itembut be aware that the available simulators could be different if you run a different version
-    steps:
-      - name: "List all simulators"
-        run: "xcrun xctrace list devices"
-
-      - name: "Start Simulator"
-        run: |
-          UDID=$(xcrun xctrace list devices | grep "^${{ matrix.device }}" | awk '{gsub(/[()]/,""); print $NF}')
-          echo $UDID
-          xcrun simctl boot "${UDID:?No Simulator with this name found}"
+  test:
+    runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2.3.4
+        - uses: subosito/flutter-action@v1.5.3
         
-      - uses: actions/checkout@v3
-      - name: "Setup Flutter SDK"
-        uses: subosito/flutter-action@v2
-        with: 
-          channel: stable
-      
-      - name: "Install Flutter dependencies"
-        run: flutter pub get
-
-      - name: "Build all generated files" 
+        - name: "Install packages"
+          run: flutter pub get
+        
+        - name: "Build all generated files" 
         run: dart run build_runner build
-
-      - name: "Run Tests"
-        run: flutter test
-
-  andriod:
-    strategy:
-      matrix:
-        api-level:
-          - 33
-      fail-fast: true
-    runs-on: macos-12
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Flutter SDK
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          # instead of "channel: stable", you could be more precise by specifying the exact version of Flutter you're using:
-          # flutter-version: '<FLUTTER_VERSION>'
-      - name: "Install Flutter dependencies"
-        run: flutter pub get
-
-      - name: "Build all generated files" 
-        run: dart run build_runner build
-      
-      - name: "Run Tests"
-        # more info on https://github.com/ReactiveCircus/android-emulator-runner
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          target: google_apis
-          arch: x86_64
-          script: flutter test
-
+        
+        - name: "Run test"
+        run: flutter test test
     
