--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,9 @@
 name: Flutter Testing
 
-on: [push, pull_request]
+on: 
+  workflow_dispatch:
+    pull_request:
+      branches: [main]
 
 jobs:
   test:
