--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   riverpod_annotation: ^2.3.3
   fpdart: ^1.1.0
   go_router: ^13.0.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +36,12 @@ flutter:
   uses-material-design: true
   generate: true
 
+flutter_launcher_icons:
+  ios: true
+  android: true
+  remove_alpha_ios: true
+  image_path_ios: "assets/images/app-icon.png"
+  image_path_android: "assets/images/app-icon.png"
 
 flavorizr:
   flavors:
