--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fpdart: ^1.1.0
   go_router: ^13.0.0
   flutter_launcher_icons: ^0.13.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
