--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   intl: ^0.18.1
   faker: ^2.1.0
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
