--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,9 @@ jobs:
       - name: "Build all generated files" 
         run: dart run build_runner build
       
+      - name: "Install realm for testing"
+        run: dart run realm install
+      
       - name: "Run test"
         run: flutter test test
     
