--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.18.1
   faker: ^2.1.0
   cupertino_icons: ^1.0.6
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
