--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   faker: ^2.1.0
   cupertino_icons: ^1.0.6
   flutter_slidable: ^3.0.1
+  custom_sliding_segmented_control: ^1.8.1
 
 dev_dependencies:
   flutter_test:
